<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/happypaws_imgmain"
    tools:context=".MainActivity" >

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_pets"
        android:layout_width="119dp"
        android:layout_height="48dp"
        android:background="@color/hpdkblue"
        android:fontFamily="sans-serif-condensed"
        android:foregroundTint="#FFFFFF"
        android:text="@string/btn_pets"
        android:textColor="#FFFFFF"
        android:textColorHint="#2E8BB3"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_appts"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:background="@color/hpdkblue"
        android:fontFamily="sans-serif-condensed"
        android:foregroundTint="#FFFFFF"
        android:text="@string/btn_appts"
        android:textColor="#FFFFFF"
        android:textColorHint="#2E8BB3"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_emergency"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:background="@color/hpdkpurple"
        android:fontFamily="sans-serif-condensed"
        android:foregroundTint="#FFFFFF"
        android:text="@string/btn_emergency"
        android:textColor="#FFFFFF"
        android:textColorHint="#2E8BB3"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.645" />

    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/txt_welcome"
        android:textColor="#2E8BB3"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.291" />

    <TextView
        android:id="@+id/txt_instructions"
        android:layout_width="259dp"
        android:layout_height="49dp"
        android:fontFamily="sans-serif"
        android:text="@string/txt_instructions"
        android:textAlignment="center"
        android:textColor="#2E8BB3"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.359" />

</androidx.constraintlayout.widget.ConstraintLayout>