<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/happypaws_yellowback"
    tools:context=".com.example.vetapp.createAccount">

    <TextView
        android:id="@+id/txt_create_backtologin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/txt_create_backtologin"
        android:textColor="#2E8BB3"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txt_create_firstname"
        android:layout_width="311dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTintMode="screen"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/txt_create_firstname"
        android:lineSpacingExtra="8sp"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFF899"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_create_backtologin" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txt_create_username"
        android:layout_width="311dp"
        android:layout_height="60dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTintMode="screen"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/txt_create_username"
        android:lineSpacingExtra="8sp"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFF899"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_create_phone" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txt_create_passwordverify"
        android:layout_width="311dp"
        android:layout_height="60dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTintMode="screen"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/txt_create_passwordverify"
        android:lineSpacingExtra="8sp"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFF899"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_create_password" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txt_create_email"
        android:layout_width="311dp"
        android:layout_height="60dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTintMode="screen"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/txt_create_email"
        android:lineSpacingExtra="8sp"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFF899"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_create_lastname" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txt_create_phone"
        android:layout_width="311dp"
        android:layout_height="60dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTintMode="screen"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/txt_create_phone"
        android:lineSpacingExtra="8sp"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFF899"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_create_email" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txt_create_password"
        android:layout_width="311dp"
        android:layout_height="60dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTintMode="screen"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/txt_create_password"
        android:lineSpacingExtra="8sp"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFF899"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_create_username" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txt_create_lastname"
        android:layout_width="311dp"
        android:layout_height="60dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTintMode="screen"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/txt_create_lastname"
        android:lineSpacingExtra="8sp"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFF899"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_create_firstname" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_createaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:color="#2E8BB3"
        android:fontFamily="sans-serif-condensed-medium"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:text="@string/btn_createaccount"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_create_passwordverify"
        app:layout_constraintVertical_bias="0.346" />

</androidx.constraintlayout.widget.ConstraintLayout>